--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "fabiang/xmpp",
+    "name": "bubbladev/xmpp",
     "description": "Library for XMPP protocol (Jabber) connections",
     "license": "BSD-2-Clause",
-    "homepage": "https://github.com/fabiang/xmpp",
+    "homepage": "https://github.com/bubbladev/xmpp",
     "keywords": ["jabber", "xmpp"],
     "authors": [
         {
